# hr-portal-server

./: .dockerignore  .env-sample  .swp  Dockerfile  README.md  TODO.md  docker-compose.yml  manage.py  pyproject.toml
.github/: pull_request_template.md
apps/leave/: admin.py  apps.py  enums.py  factories.py  models.py  mutation.py  schema.py  serializers.py  signals.py
apps/leave/migrations/: 0001_initial.py  0002_auto_20211124_1532.py
apps/leave/tests/: test_mutation.py  test_query.py
apps/templates/email/: base.html
apps/templates/email/leave/: subject.txt
apps/templates/email/leave/denied/: body.html  body.txt
apps/templates/email/leave/noted/: body.html  body.txt
apps/user/: __init__.py  admin.py  enums.py  factories.py  filters.py  models.py  mutation.py  schema.py  serializers.py
apps/user/migrations/: 0001_initial.py  0003_user_avatar.py
apps/user/tests/: test_mutation.py  test_query.py
fixtures/: department.json  leave.json  leave_day.json  user.json  user_department.json  userdepartment.json
hr_portal/: asgi.py  enums.py  mail.py  middlewares.py  models.py  schema.py  serializers.py  settings.py  urls.py  wsgi.py
scripts/: run_develop.sh  run_prod.sh
user/: admin.py  models.py
user/migrations/: 0001_initial.py  0002_department_logo_url.py  0004_alter_user_gender.py
user/models/: __init__.py  department.py  user.py  user_department.py
utils/: common.py
utils/graphene/: fields.py  middleware.py  mutation.py  tests.py  types.py
