[tool.poetry]
name = "hr_portal"
version = "0.1.0"
description = ""
authors = ["Togglecorp-Dev <dev@togglecorp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=3.2,<3.3"
Pillow = "^8.4.0"
psycopg2-binary = "^2.9.1"
graphene-django = ">=2,<3"
graphene-graphiql-explorer = "*"
graphene-django-extras = { git = "https://github.com/the-deep/graphene-django-extras.git", branch = "v0.4.9-patch.1" }
graphene-file-upload = "^1.3.0"
sentry-sdk = "1.1.0"
djangorestframework = "3.12.4"
celery = "5.1.1"
django-enumfield = "^2.0.2"
factory-boy = "^3.2.1"
drf-dynamic-fields = "0.3.1"
django-filter = "2.4.0"
django-cors-headers = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
